# libpkgimage

./: ABI.md  BACKENDS.md  DESIGN.md  Doxyfile  HISTORY.md  IDENTITY.md  INTEGRATION.md  README.md  REPLAY.md  TESTING.md  meson.build  meson.options
.github/workflows/: build.yml
include/libpkgimage/: archive_backend.h  digest.h  entry_selection.h  error.h  inspection_receipt.h  libarchive_backend.h  libpkgimage.h  package_archive.h  package_entry.h  package_image.h  package_path.h  payload_sink.h
man/: libpkgimage.3.scdoc  meson.build  pkgimage_archive.3.scdoc  pkgimage_identity.3.scdoc  pkgimage_libarchive_backend.3.scdoc  pkgimage_model.3.scdoc  pkgimage_replay.3.scdoc
src/: archive_backend.cpp  digest.cpp  entry_selection.cpp  error.cpp  identity_writer.cpp  identity_writer.h  inspection_receipt.cpp  libarchive_backend.cpp  meson.build  package_entry.cpp  package_image.cpp  package_path.cpp  sha256.cpp  sha256.h
tests/: archive_identity_test.cpp  digest_test.cpp  documentation_source_test.sh  entry_selection_test.cpp  inspection_receipt_test.cpp  libarchive_backend_test.cpp  meson.build  package_image_identity_test.cpp  package_image_test.cpp  package_path_test.cpp  payload_replay_test.cpp  public_dependency_test.sh  public_header_test.cpp  release_metadata_test.sh  replay_integrity_test.cpp  umbrella_header_test.cpp
