project(
  'libpkgimage',
  'cpp',
  version: '0.2.1',
  license: 'GPL-3.0-or-later',
  meson_version: '>=1.2.0',
  default_options: [
    'cpp_std=c++17',
    'warning_level=3',
    'default_library=shared',
    'b_ndebug=if-release',
  ],
)

library_kind = get_option('default_library')
if library_kind == 'both'
  error('libpkgimage requires separate shared and static builds')
endif

want_static = get_option('link_mode') == 'static'
if (library_kind == 'static') != want_static
  error('default_library and link_mode must both select shared or static')
endif

libcrypto_dep = dependency(
  'libcrypto',
  required: true,
  static: want_static,
)

libarchive_dep = dependency(
  'libarchive',
  required: true,
  static: want_static,
)

pkgconf = import('pkgconfig')

subdir('src')
subdir('man')
subdir('tests')
