option(
  'link_mode',
  type: 'combo',
  choices: ['shared', 'static'],
  value: 'shared',
  description: 'How libpkgimage links against external dependencies',
)

option(
  'tests',
  type: 'feature',
  value: 'enabled',
  description: 'Build and run unit tests',
)

option(
  'man_pages',
  type: 'feature',
  value: 'auto',
  description: 'Build manual pages with scdoc',
)
